--- a/index.html
+++ b/index.html
@@ -48,23 +48,21 @@
         </div>
     </header>
     <!-- End header  -->
-    <!-- start slides -->
-    <section id="slide-container">
-        <div class="slide">
-            <img src="img/slide/PNL.jpg" alt="">
+    <section id="in-container">
+        <div class="contenu-home">
+            <div class="btn">
+                <input type="file" id="insertImg"/>
+                <button id="push">Push</button>
+                <button id="pop">Pop</button>
+                <button id="clear">Clear</button>
+                
+            </div>
+            <div class="btn1">
+                <button id="peak">&#8679;</button>
+                <div id="result"></div>
+                <button id="lowKey">&#8681;</button>
+            </div>
         </div>
-        <!-- <div class="slide">
-            <img src="img/slide/eminem.jpg" alt="">
-        </div>
-        <div class="slide">
-            <img src="img/slide/dbf.jpg" alt="">
-        </div>
-        <div class="slide">
-            <img src="img/slide/slide1.jpg" alt="">
-        </div> -->
-        <!-- <a class="prev" onclick="currentSlide(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a> -->
-        
     </section>
     <!-- Start Footer -->
     <footer>
@@ -93,5 +91,6 @@
         </div>
     </footer>
     <!-- End footer -->
+    <script src="js/index.js"></script>
 </body>
 </html>
