--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
             </div>
         </div>
     </section>
+    <!-- file -->
+    <section id="in-container">
+        <div class="contenu-home">
+            <div class="btn">
+                <input type="pile" id="insertImg"/>
+                <button id="push">Push</button>
+                <button id="pop">Pop</button>
+                <button id="clear">Clear</button>
+                
+            </div>
+            <div class="btn1">
+                <button id="peak">&#8679;</button>
+                <div id="result"></div>
+                <button id="lowKey">&#8681;</button>
+            </div>
+        </div>
+    </section>
     <!-- Start Footer -->
     <footer>
         <div class="container-ftr">
