--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>testJSass4</title>
+    <title>M&Music</title>
     <!-- add css -->
     <link rel="stylesheet" href="Sass/style.css">
     <!-- add fontawesome -->
     <script src="https://kit.fontawesome.com/8f45faa16b.js" crossorigin="anonymous"></script>
     <!-- font family  -->
-    <link href="https://fonts.googleapis.com/css?family=Arimo|Caveat+Brush|Poppins&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Arimo|Caveat+Brush|Poppins&display=swap" rel="stylesheet">   
 </head>
 <body>
     <!-- start header  -->
@@ -29,7 +29,7 @@
             <button class="btn"><i class="fas fa-bars"></i></button>
             <div class="dropdown-menu">
                 <a id="toblack" href="index.html">Home</a>
-                <a id="toblack" href="Gallery.html">Gallery</a>
+                <a id="toblack" href="Gallery.html" style="text-transform: capitalize;">Gallery</a>
                 <a id="toblack" href="playMusic.html">Song</a>
             </div>
         </div>
@@ -48,6 +48,7 @@
         </div>
     </header>
     <!-- End header  -->
+    <!-- pile  -->
     <section id="in-container">
         <div class="contenu-home">
             <div class="btn">
@@ -68,15 +69,15 @@
     <section id="in-container">
         <div class="contenu-home">
             <div class="btn">
-                <input type="pile" id="insertImg"/>
-                <button id="push">Push</button>
-                <button id="pop">Pop</button>
-                <button id="clear">Clear</button>
+                <input type="text" id="insertData"/>
+                <button id="puh">Push</button>
+                <button id="po">Pop</button>
+                <button id="clr">Clear</button>
                 
             </div>
             <div class="btn1">
                 <button id="peak">&#8679;</button>
-                <div id="result"></div>
+                <div id="reult"></div>
                 <button id="lowKey">&#8681;</button>
             </div>
         </div>
