--- a/index.html
+++ b/index.html
@@ -48,37 +48,35 @@
         </div>
     </header>
     <!-- End header  -->
-    <!-- pile  -->
+    <!-- pile (stack) -->
     <section id="in-container">
+        <h2>Implementation of Stack </h2>
         <div class="contenu-home">
             <div class="btn">
-                <input type="file" id="insertImg"/>
+                <input type="text" id="insertImg"/>
                 <button id="push">Push</button>
                 <button id="pop">Pop</button>
                 <button id="clear">Clear</button>
                 
             </div>
             <div class="btn1">
-                <button id="peak">&#8679;</button>
                 <div id="result"></div>
-                <button id="lowKey">&#8681;</button>
             </div>
         </div>
     </section>
-    <!-- file -->
+    <!-- file (queue)-->
     <section id="in-container">
+        <h2>Implementation of Queue </h2>
         <div class="contenu-home">
             <div class="btn">
                 <input type="text" id="insertData"/>
-                <button id="puh">Push</button>
-                <button id="po">Pop</button>
+                <button id="enq">Enq</button>
+                <button id="deq">Deq</button>
                 <button id="clr">Clear</button>
                 
             </div>
             <div class="btn1">
-                <button id="peak">&#8679;</button>
-                <div id="reult"></div>
-                <button id="lowKey">&#8681;</button>
+                <div id="qResult"></div>
             </div>
         </div>
     </section>
